# soundbyte

./: pyproject.toml  test.sbp
soundbyte/: main.py
soundbyte/audio/: engine.py
soundbyte/commands/: __init__.py  base.py  track_commands.py
soundbyte/core/: audio_engine.py  constants.py
soundbyte/gui/: main_window.py  timeline_widget.py  track_widget.py
tests/: test_audio_engine.py
