[tool.poetry]
name = "soundbyte"
version = "0.1.0"
description = "Python DAW/Sequencer Project"
authors = ["tabibyte"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.1"
pyqtgraph = "^0.13.7"

[tool.poetry.group.dev.dependencies]
PyQt6 = "^6.7.1"
numpy = "^2.1.3"
PyAudio = "^0.2.14"
sounddevice = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
