[tool.poetry]
name = "soundbyte"
version = "0.1.0"
description = "python audio sequencer"
authors = ["tabibyte"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.7.1"
sounddevice = "^0.5.1"
numpy = "^2.1.3"
soundfile = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^8.3.3"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
